--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -18,7 +18,10 @@
 		"ms-python.python",
 		"tabnine.tabnine-vscode",
 		"planbcoding.vscode-react-refactor",
-		"vscode-icons-team.vscode-icons"
+		"vscode-icons-team.vscode-icons",
+		"oouo-diogo-perdigao.docthis",
+		"humao.rest-client",
+		"christian-kohler.npm-intellisense"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
