modified documentation to explicitly declare optional programs

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"stackbreak.comment-divider",
+		"aaron-bond.better-comments",
 		"formulahendry.auto-rename-tag",
 		"dsznajder.es7-react-js-snippets",
 		"eamodio.gitlens",
