--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -27,5 +27,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          cd controller,
+          cd $GITHUB_WORKSPACE/controller,
           sphinx-build -b html docs/source/ docs/build/html
