--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -27,5 +27,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          cd $GITHUB_WORKSPACE/controller,
-          sphinx-build -b html docs/source/ docs/build/html
+          echo $GITHUB_WORKSPACE,
+          ls $GITHUB_WORKSPACE,
+          cd $GITHUB_WORKSPACE,
+          ls
