fix path and install dependencies

--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -21,13 +21,22 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.  Fetches most recent commit for all branches and tags
       - uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo $GITHUB_WORKSPACE,
-          ls $GITHUB_WORKSPACE,
-          cd $GITHUB_WORKSPACE,
-          ls
+      # Setup python 3.10 on runner
+      - uses: actions/setup-python@v4
+        with: 
+          python-version: '3.10'
+          - name: Install dependencies
+            run: |
+              python3 -m pip install --upgrade pip
+              pip3 install -r ${{ GITHUB_WORKSPACE }}/controller/requirements.txt
+
+          # Runs sphinx documentation
+          - name: Run a multi-line script
+            run: |
+              cd ${{ GITHUB_WORKSPACE }}/controller,
+              sphinx-build -b html docs/source/ docs/build/html 
