--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build sphinx documentation
         run: sphinx-build -b html controller/docs/source/ controller/docs/build/html 
       - name: Archive sphinx documentation
-        uses: actions/upload-artifacts@v3
+        uses: actions/upload-artifact@v3
         with:
           name: index.html
           path: controller/docs/build/html/index.html
