--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: index.html
-          path: controller/docs/build/html/index.html
+          path: controller/docs/build/html/
