--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -31,16 +31,17 @@ jobs:
         with: 
           python-version: '3.10'
 
+      # Install the dependencies for running this action
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
           pip3 install -r ${{ github.workspace }}/controller/requirements.txt
       
-      - name: Make the sphinx documentation
-        run: |
-          make -C docs clean
-          make -C docs html
+      # Build the sphinx documentation
+      - name: Run sphinx documentation
+        run: sphinx-build -b html controller/docs/source/ controller/docs/build/html
       
+      # Initialize a repo and commmit the changes
       - name: Initialize a new repo and commit generated files
         run: |
           cd docs/build/html
@@ -51,9 +52,10 @@ jobs:
           git config --local user.name "GitHub Action"
           git commit -m 'deploy'
 
+      # Push those changes to a branch to be shown with gh-pages
       - name: Push to destination branch
         uses: ad-m/github-push-action@v0.5.0
         with: 
           github_token : ${{ secrets.GITHUB_TOKEN}}
           branch: gh-pages
-          directory: ./docs/build/html 
+          directory: ./docs/build/  
