--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -44,7 +44,7 @@ jobs:
       # Initialize a repo and commmit the changes
       - name: Initialize a new repo and commit generated files
         run: |
-          cd docs/build/html
+          cd controller/docs/build/html
           git init
           touch .nojekyll
           git add --all
