--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -58,4 +58,4 @@ jobs:
         with: 
           github_token : ${{ secrets.GITHUB_TOKEN}}
           branch: gh-pages
-          directory: ./docs/build/  
+          directory: controller/docs/build/html
