--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -51,11 +51,13 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m 'deploy'
+          git config --global --add safe.directory /github/workspace/controller/docs/build/html
+          git push gh-pages
 
-      # Push those changes to a branch to be shown with gh-pages
-      - name: Push to destination branch
-        uses: ad-m/github-push-action@v0.5.0
-        with: 
-          github_token : ${{ secrets.GITHUB_TOKEN}}
-          branch: gh-pages
-          directory: controller/docs/build/html
+      # # Push those changes to a branch to be shown with gh-pages
+      # - name: Push to destination branch
+      #   uses: ad-m/github-push-action@v0.5.0
+      #   with: 
+      #     github_token : ${{ secrets.GITHUB_TOKEN}}
+      #     branch: gh-pages
+      #     directory: controller/docs/build/html
