--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -51,13 +51,12 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m 'deploy'
-          git config --global --add safe.directory /github/workspace/controller/docs/build/html
-          git push origin gh-pages
 
-      # # Push those changes to a branch to be shown with gh-pages
-      # - name: Push to destination branch
-      #   uses: ad-m/github-push-action@v0.5.0
-      #   with: 
-      #     github_token : ${{ secrets.GITHUB_TOKEN}}
-      #     branch: gh-pages
-      #     directory: controller/docs/build/html
+      # Push those changes to a branch to be shown with gh-pages
+      - name: Push to destination branch
+        uses: ad-m/github-push-action@v0.5.0
+        with: 
+          github_token : ${{ secrets.GITHUB_TOKEN}}
+          branch: gh-pages
+          force_with_lease: true
+          directory: controller/docs/build/html
