--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -50,11 +50,12 @@ jobs:
           git add --all
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git config --global --add safe.directory /github/workspace/controller/docs/build/html
           git commit -m 'deploy'
 
       # Push those changes to a branch to be shown with gh-pages
       - name: Push to destination branch
-        uses: ad-m/github-push-action@v0.5.0
+        uses: ad-m/github-push-action@master
         with: 
           github_token : ${{ secrets.GITHUB_TOKEN}}
           branch: gh-pages
