--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -55,7 +55,7 @@ jobs:
 
       # Push those changes to a branch to be shown with gh-pages
       - name: Push to destination branch
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@v0.5.0
         with: 
           github_token : ${{ secrets.GITHUB_TOKEN}}
           branch: gh-pages
