--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,15 @@
   "description": "",
   "main": "helloWorld.js",
   "scripts": {
-    "start": "node ./build/index.js",
-    "build": "tsc -p .",
-    "devStart": "nodemon ./src/index.ts"
+    "devStart": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "nodemon": "^2.0.20"
   }
 }
