--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,7 @@
 		"stackbreak.comment-divider",
 		"aaron-bond.better-comments",
 		"formulahendry.auto-rename-tag",
-		"dsznajder.es7-react-js-snippets",
+		"infeng.vscode-react-typescript",
 		"eamodio.gitlens",
 		"ms-toolsai.jupyter",
 		"ms-toolsai.vscode-jupyter-cell-tags",
