--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -35,29 +35,17 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          pip3 install -r ${{ github.workspace }}/controller/requirements.txt
+          pip3 install -r ${{ github.workspace }}/docs/requirements.txt
       
       # Build the sphinx documentation
       - name: Run sphinx documentation
-        run: sphinx-build -b html controller/docs/source/ controller/docs/build/html
+        run: sphinx-build -b html docs/source/ docs/build/html
       
-      # Initialize a repo and commmit the changes
-      - name: Initialize a new repo, commit generated files, and push the changes
-        run: |
-          cd controller/docs/build/html
-          git init
-          touch .nojekyll
-          git add --all
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git config --global --add safe.directory /github/workspace/controller/docs/build/html
-          git commit -m 'deploy'
+      # Publish to GitHub Pages
+      - name: Publish to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/build
 
-      # Push those changes to a branch to be shown with gh-pages
-      - name: Push to destination branch
-        uses: ad-m/github-push-action@v0.5.0
-        with: 
-          github_token : ${{ secrets.GITHUB_TOKEN}}
-          branch: gh-pages
-          force_with_lease: true
-          directory: controller/docs/build/html
+      
