--- a/.github/workflows/sphinx_documentation.yml
+++ b/.github/workflows/sphinx_documentation.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          pip3 install -r ${{ github.workspace }}/docs/requirements.txt
+          pip3 install -r ${{ github.workspace }}/controller/requirements.txt
       
       # Build the sphinx documentation
       - name: Build sphinx documentation
