Add Pico W stubs to /controller and ignore Pico-W-Go extension stubs in .vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore macos desktop services files
 .DS_Store
 
-# Ignore Pico-W-o stub directory, which is specific to contributer's dev env
-/Pico-W-Stub
+# Ignore Pico-W-Go extension stubs
+.vscode/Pico-W-Stub
