--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"redhat.vscode-yaml",
 		"stackbreak.comment-divider",
 		"aaron-bond.better-comments",
 		"formulahendry.auto-rename-tag",
