--- a/.github/workflows/mongodb_connect.yml
+++ b/.github/workflows/mongodb_connect.yml
@@ -5,7 +5,6 @@ on: [push, pull_request]
 jobs:
   # Run tests
   mongodb_connect:
-    name: mongodb_connect
     runs-on: ubuntu-latest
     services:
       mongo:
@@ -26,9 +25,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-      - name: Switch to server directory
-        run: cd server/
-      - name: Install dependencies
-        run: npm install
       - name: Test mongoDB connection
-        run: npm run devStart
+        run: |
+          cd server
+          npm install
+          npm run devStart
