use env variables for secrets

--- a/.github/workflows/mongodb_connect.yml
+++ b/.github/workflows/mongodb_connect.yml
@@ -30,3 +30,7 @@ jobs:
           cd server
           npm install
           npm run devStart
+        env: 
+          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+          MONGO_INITDB_DATABASE: ${{ secrets.MONGO_INITDB_DATABASE }}
