--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -1,13 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Sphinx Documentation
+name: luminosityled.com update
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   # ** means all branches and tags
   pull_request:
-    branches: "master"
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,20 +26,20 @@ jobs:
         with: 
           fetch-depth: 0
 
-      # Setup python 3.10 on runner and install all dependencies
-      - uses: actions/setup-python@v4
+      # Setup nodejs on runner
+      - uses: actions/setup-node@v3
         with: 
-          python-version: '3.10'
+          node-version: 16
 
-      # Install the dependencies for running this action
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          pip3 install -r ${{ github.workspace }}/controller/requirements.txt
+      # Install the npm dependencies for running this action
+      - name: Install npm dependencies
+        run: npm install client
       
-      # Build the sphinx documentation
-      - name: Build sphinx documentation
-        run: sphinx-build -b html docs/source/ docs/build/html
+      # Install the npm dependencies & build the react website
+      - name: Build react website 
+        run: |
+          cd client
+          npm install && npm run build
       
       # Publish to GitHub Pages
       - name: Publish to GitHub Pages
@@ -47,7 +47,7 @@ jobs:
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build/html
+          publish_dir: client/build
           force_orphan: true
 
       
