luminosityleds.com app name and README.md

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://luminosityleds.com/",
+  "homepage": "https://luminosityleds.com/",
   "name": "client_copy",
   "version": "0.1.0",
   "private": true,
