--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -4,9 +4,8 @@ name: luminosityled.com update
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  # ** means all branches and tags
-  pull_request:
+  # Triggers the workflow on push events only to the "master" branch
+  push:
     branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
