--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# Workflow to update the luminosityleds.com website on pushes to master only
 
 name: luminosityled.com update
 
