--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -6,7 +6,7 @@ name: luminosityled.com update
 on:
   # Triggers the workflow on push events only to the "master" branch
   push:
-    branches: ["master"]
+    branches: ["master", "LL-99"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
