--- a/controller/.gitignore
+++ b/controller/.gitignore
@@ -3,3 +3,6 @@
 
 # shell script to connect to MCU; this will vary accross machines/environemnts
 .connect*
+
+# shell script to sync MCU with flash directory
+.sync*
