--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -25,7 +25,8 @@
 		"vscode-icons-team.vscode-icons",
 		"oouo-diogo-perdigao.docthis",
 		"humao.rest-client",
-		"christian-kohler.npm-intellisense"
+		"christian-kohler.npm-intellisense",
+		"VisualStudioExptTeam.vscodeintellicode" // micropy-cli: optional for advanced intellisense
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
