--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,11 @@
     "python.autoComplete.typeshedPaths":  [".micropy/rp2-micropython-1.19.1/frozen", ".micropy/BradenM-micropy-stubs-4f5a52a/frozen", ".micropy/rp2-micropython-1.19.1/stubs", ".micropy/controller-temp"],
     "python.analysis.typeshedPaths":  [".micropy/rp2-micropython-1.19.1/frozen", ".micropy/BradenM-micropy-stubs-4f5a52a/frozen", ".micropy/rp2-micropython-1.19.1/stubs", ".micropy/controller-temp"],
 
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": true,
+    "python.analysis.extraPaths": [
+        ".micropy/rp2-micropython-1.19.1/frozen",
+        ".micropy/BradenM-micropy-stubs-4f5a52a/frozen",
+        ".micropy/rp2-micropython-1.19.1/stubs",
+        ".micropy/controller-temp"
+    ]
 }
