--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -4,9 +4,9 @@ name: luminosityled.com update
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push events only to the "master" branch
+  # Triggers the workflow on tag events only to the "master" branch
   push:
-    branches: ["master"]
+    tags: ["master, LL-102"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,6 +24,30 @@ jobs:
       - uses: actions/checkout@v3
         with: 
           fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+      
+      - name: Install dependencies and generate release notes
+        run: |
+          cd scripts
+          pip install -r requirements.txt
+          python create_jira_release_notes.py 
+
+      # Create Github Release
+      - name: Upload Artifacts and Create Github Release
+        # ${{ github.ref_name }} is most recent tag name.  For workflows triggered by push, this is the branch or tag ref that was pushed.
+        # https://docs.github.com/en/actions/learn-github-actions/contexts
+        uses: softprops/action-gh-release@v1
+        with:
+          name: ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
+          body_path: ${{ github.workspace }}/scripts/release_notes.md
+        if: ${{ github.ref_type == 'tag' }} # Run job on tag only
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
 
       # Setup nodejs on runner
       - uses: actions/setup-node@v3
@@ -45,5 +69,3 @@ jobs:
           publish_dir: client/build
           force_orphan: true
           cname: luminosityleds.com
-
-      
