--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -4,9 +4,9 @@ name: luminosityled.com update
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push events only to the "master" branch
+  # Triggers the workflow only on any tag event only
   push:
-    branches: ["master"]
+    tags: ["**"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
