--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,12 +20,21 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
-    # Install package manager and pylint
-    - name: Install dependencies
+    
+    - name: Install Controller dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install -r ./controller/requirements.txt
     # Default score to pass is 10, 0 on fatal error
-    - name: Run Pylint
+    - name: Run Pylint on Controller Files
       run: |
-       pylint --rcfile=./controller/pylintrc $(git ls-files '*.py')
+       pylint --rcfile=./controller/pylintrc $(git ls-files 'controller/*.py')
+    - name: Install Scripts dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ./scripts/requirements.txt
+    # Default score to pass is 10, 0 on fatal error
+    - name: Run Pylint on Scripts Files
+      run: |
+       pylint --rcfile=./scripts/pylintrc $(git ls-files 'scripts/*.py')
+    
