--- a/.github/workflows/luminosityleds_update.yml
+++ b/.github/workflows/luminosityleds_update.yml
@@ -31,6 +31,11 @@ jobs:
           python-version: '3.10'
       
       - name: Install dependencies and generate release notes
+        env:
+            JIRA_URL: ${{ secrets.JIRA_URL }}
+            JIRA_PROJECT_ID: ${{ secrets.JIRA_PROJECT_ID }}
+            JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
+            JIRA_PASSWORD: ${{ secrets.JIRA_PASSWORD }}
         run: |
           cd scripts
           pip install -r requirements.txt
