--- a/controller/.gitignore
+++ b/controller/.gitignore
@@ -1,7 +1,7 @@
 # virtual environment
 .venv
 
-# shell script to connect to MCU; this will vary accross machines/environemnts
+# shell scripts to connect to MCU; this will vary accross machines/environemnts
 .connect*
 
 # shell script to sync MCU with flash directory
