--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"rangav.vscode-thunder-client",
 		"redhat.vscode-yaml",
 		"wayou.vscode-todo-highlight",
 		"stackbreak.comment-divider",
