--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,27 +14,26 @@ jobs:
   lint-python-code:
     runs-on: ubuntu-latest
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
-    
-    - name: Install Controller dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r ./controller/requirements.txt
-    # Default score to pass is 10, 0 on fatal error
-    - name: Run Pylint on Controller Files
-      run: |
-       pylint --rcfile=./controller/pylintrc $(git ls-files 'controller/*.py')
-    - name: Install Scripts dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r ./scripts/requirements.txt
-    # Default score to pass is 10, 0 on fatal error
-    - name: Run Pylint on Scripts Files
-      run: |
-       pylint --rcfile=./scripts/pylintrc $(git ls-files 'scripts/*.py')
-    
+      # Checks-out your repository under $GITHUB_WORKSPACE
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+
+      - name: Install Controller dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./controller/requirements.txt
+      # Default score to pass is 10, 0 on fatal error
+      - name: Run Pylint on Controller Files
+        run: |
+          pylint --rcfile=./controller/pylintrc $(git ls-files 'controller/*.py')
+      - name: Install Scripts dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./scripts/requirements.txt
+      # Default score to pass is 10, 0 on fatal error
+      - name: Run Pylint on Scripts Files
+        run: |
+          pylint --rcfile=./scripts/pylintrc $(git ls-files 'scripts/*.py')
