--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "axios": "^1.2.6",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "express": "^4.18.2",
+    "lodash.get": "^4.4.2",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
