--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,20 +21,18 @@ jobs:
       with:
         python-version: '3.10'
     
-    - name: Install Controller dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r ./controller/requirements.txt
     # Default score to pass is 10, 0 on fatal error
-    - name: Run Pylint on Controller Files
+    - name: Install Controller dependencies and Run Pylint on Controller Files
       run: |
-       pylint --rcfile=./controller/.pylintrc $(git ls-files 'controller/*.py')
-    - name: Install Scripts dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r ./scripts/requirements.txt
+        cd ./controller
+        pip install -r requirements.txt
+        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        cd ..
     # Default score to pass is 10, 0 on fatal error
-    - name: Run Pylint on Scripts Files
+    - name: Install Scripts dependencies and Run Pylint on Scripts Files
       run: |
-       pylint --rcfile=./scripts/.pylintrc $(git ls-files 'scripts/*.py')
+        cd ./scripts
+        pip install -r requirements.txt
+        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        cd ..
     
