--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -32,6 +32,7 @@ jobs:
         python -m pytest test/mongodb/test_color.py
         python -m pytest test/mongodb/test_brightness.py
         python -m pytest test/mongodb/test_connected.py
+        python -m pytest test/mongodb/test_powered.py
         cd ..
     # Default score to pass is 10, 0 on fatal error
     - name: Install Scripts dependencies and Run Pylint on Scripts Files
