Replace MONG)_URL with MONGO_DAPI_KEY in python workflow

--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -14,7 +14,7 @@ jobs:
   pytest-pylint-code:
     runs-on: ubuntu-latest
     env:
-      MONGO_URL: ${{ secrets.MONGO_URL }}
+      MONGO_URL: ${{ secrets.MONGO_DAPI_KEY}}
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE
     - uses: actions/checkout@v3
