--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -24,11 +24,16 @@ jobs:
         python-version: '3.10'
     
     # Default score to pass is 10, 0 on fatal error
+    - name: Install and configure tests with Tox
+      run: |
+        cd ..
+        pip install -r requirements.txt
+        python -m tox -e py
+
     - name: Install Controller dependencies and Run Pytest and Pylint on Controller Files
       run: |
         cd ./controller
         pip install -r requirements.txt
-        python -m tox -e py
         python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
         python -m pytest test/mongodb/test_color.py
         python -m pytest test/mongodb/test_brightness.py
