--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -26,7 +26,7 @@ jobs:
     # Default score to pass is 10, 0 on fatal error
     - name: Install and configure tests with Tox
       run: |
-        cd ..
+        cd ./controller
         pip install -r requirements.txt
         python -m tox -e py
 
