--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,12 @@ deps =
     pytest
     coverage
 commands =
-    coverage run -m pytest
-    coverage xml
+    coverage run -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+    coverage run -m pytest test/mongodb/test_color.py
+    coverage run -m pytest test/mongodb/test_brightness.py
+    coverage run -m pytest test/mongodb/test_connected.py
+    coverage run -m pytest test/mongodb/test_powered.py
+    coverage report
 
 [coverage:run]
 relative_files = True
