test: added pylint to deps

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,11 @@ envlist = py310
 
 [testenv]
 deps =
+    pylint
     pytest
     coverage
 commands =
+    cd ./controller
     coverage run -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
     coverage run -m pytest test/mongodb/test_color.py
     coverage run -m pytest test/mongodb/test_brightness.py
