--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -35,11 +35,12 @@ jobs:
       run: |
         cd ./controller
         pip install -r requirements.txt
-        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
-        python -m pytest test/mongodb/test_color.py
-        python -m pytest test/mongodb/test_brightness.py
-        python -m pytest test/mongodb/test_connected.py
-        python -m pytest test/mongodb/test_powered.py
+        coverage run -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        coverage run -m pytest test/mongodb/test_color.py
+        coverage run -m pytest test/mongodb/test_brightness.py
+        coverage run -m pytest test/mongodb/test_connected.py
+        coverage run -m pytest test/mongodb/test_powered.py
+        coverage report
         cd ..
     # Default score to pass is 10, 0 on fatal error
     - name: Install Scripts dependencies and Run Pylint on Scripts Files
