test: run coverage on controller files

--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,18 @@ envlist = py310
 
 [testenv]
 deps =
-    pylint
     pytest
     coverage
+    pytest-cov
 commands =
-    cd ./controller
-    coverage run -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
     coverage run -m pytest test/mongodb/test_color.py
     coverage run -m pytest test/mongodb/test_brightness.py
     coverage run -m pytest test/mongodb/test_connected.py
     coverage run -m pytest test/mongodb/test_powered.py
-    coverage report
+
+[testenv:report]
+deps = coverage
+commands = coverage report
 
 [coverage:run]
 relative_files = True
