--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         cd ./controller
         pip install -r requirements.txt
-        coverage run -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
         coverage run -m pytest test/mongodb/test_color.py
         coverage run -m pytest test/mongodb/test_brightness.py
         coverage run -m pytest test/mongodb/test_connected.py
