run coverage on controller files

--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -29,12 +29,11 @@ jobs:
         cd ./controller
         pip install -r requirements.txt
         coverage erase
-        coverage run -m pytest test
-        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
-        python -m pytest test/mongodb/test_color.py
-        python -m pytest test/mongodb/test_brightness.py
-        python -m pytest test/mongodb/test_connected.py
-        python -m pytest test/mongodb/test_powered.py
+        coverage run -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        coverage run -m pytest test/mongodb/test_color.py
+        coverage run -m pytest test/mongodb/test_brightness.py
+        coverage run -m pytest test/mongodb/test_connected.py
+        coverage run -m pytest test/mongodb/test_powered.py
         coverage report
         cd ..
     # Default score to pass is 10, 0 on fatal error
