--- a/.github/workflows/pytest_pylint.yml
+++ b/.github/workflows/pytest_pylint.yml
@@ -24,23 +24,23 @@ jobs:
         python-version: '3.10'
     
     # Default score to pass is 10, 0 on fatal error
-    - name: Install Controller dependencies and Run Pytest and Pylint on Controller Files
+    - name: Install Controller dependencies, Run Pytest and Pylint on Controller Files, and Generate Coverage report
       run: |
         cd ./controller
         pip install -r requirements.txt
-        coverage run --a -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
+        coverage erase
         coverage run --a -m pytest test/mongodb/test_color.py
         coverage run --a -m pytest test/mongodb/test_brightness.py
         coverage run --a -m pytest test/mongodb/test_connected.py
         coverage run --a -m pytest test/mongodb/test_powered.py
+        coverage report -m
         cd ..
     # Default score to pass is 10, 0 on fatal error
-    - name: Install Scripts dependencies, Run Pylint on Scripts Files, and Generate Coverage report
+    - name: Install Scripts dependencies and Run Pylint on Scripts Files
       run: |
         cd ./scripts
         pip install -r requirements.txt
-        coverage run --a -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
-        coverage report -m
-        coverage erase
+        python -m pylint --rcfile=.pylintrc $(git ls-files '*.py')
         cd ..
 
