--- a/.github/workflows/typescript_coverage.yml
+++ b/.github/workflows/typescript_coverage.yml
@@ -1,11 +1,15 @@
 # https://github.com/marketplace/actions/jest-coverage-report
 # By default, uses npm for package manager
-name: 'coverage'
+name: Typescript Coverage
+
+# Runs on push to any branch
 on:
-    pull_request_target:
-        branches:
-            - master
-            - main
+  push:
+    # ** means all branches and tags
+    branches: ["**"]
+  # Workflow can be triggered manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
     coverage:
         runs-on: ubuntu-latest
