--- a/package.json
+++ b/package.json
@@ -1,9 +1,29 @@
 {
-    "dependencies": {
-      "typescript-coverage-report": "^0.7.0"
-    },
-    "scripts": {
-      "ts-coverage": "typescript-coverage-report"
-    }
+  "name": "luminosityleds",
+  "version": "0.1.0",
+  "description": "Illuminate individual expression and creativity",
+  "scripts": {
+    "build": "tsc -p ./src",
+    "account": "nodemon ./src/account/account.ts",
+    "device": "nodemon ./src/device/device.ts",
+    "server": "nodemon ./src/server/server.ts",
+    "notification": "nodemon ./src/notification/notification.ts",
+    "search": "nodemon ./src/search/search.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "axios": "^1.2.6",
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
+    "express": "^4.18.2",
+    "lodash.get": "^4.4.2",
+    "mongoose": "^6.7.2",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
-  
+}
